feat(apps/server): add /scpis [GET, POST] and /scpis [PUT, GET, DELETE]
